--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,51 +1,81 @@
-bandit==1.7.9 ; python_version >= "3.9" and python_version < "4.0"
-black==22.12.0 ; python_version >= "3.9" and python_version < "4.0"
-blinker==1.8.2 ; python_version >= "3.9" and python_version < "4.0"
-certifi==2024.7.4 ; python_version >= "3.9" and python_version < "4.0"
-cfgv==3.4.0 ; python_version >= "3.9" and python_version < "4.0"
-charset-normalizer==3.3.2 ; python_version >= "3.9" and python_version < "4.0"
-click==8.1.7 ; python_version >= "3.9" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and (platform_system == "Windows" or sys_platform == "win32")
-coverage==6.5.0 ; python_version >= "3.9" and python_version < "4.0"
-distlib==0.3.8 ; python_version >= "3.9" and python_version < "4.0"
-dparse==0.6.3 ; python_version >= "3.9" and python_version < "4.0"
-exceptiongroup==1.2.2 ; python_version >= "3.9" and python_version < "3.11"
-filelock==3.15.4 ; python_version >= "3.9" and python_version < "4.0"
-flake8==4.0.1 ; python_version >= "3.9" and python_version < "4.0"
-flask==2.3.3 ; python_version >= "3.9" and python_version < "4.0"
-identify==2.6.0 ; python_version >= "3.9" and python_version < "4.0"
-idna==3.7 ; python_version >= "3.9" and python_version < "4.0"
-importlib-metadata==8.2.0 ; python_version >= "3.9" and python_version < "3.10"
-iniconfig==2.0.0 ; python_version >= "3.9" and python_version < "4.0"
-itsdangerous==2.2.0 ; python_version >= "3.9" and python_version < "4.0"
-jinja2==3.1.4 ; python_version >= "3.9" and python_version < "4.0"
-markdown-it-py==3.0.0 ; python_version >= "3.9" and python_version < "4.0"
-markupsafe==2.1.5 ; python_version >= "3.9" and python_version < "4.0"
-mccabe==0.6.1 ; python_version >= "3.9" and python_version < "4.0"
-mdurl==0.1.2 ; python_version >= "3.9" and python_version < "4.0"
-mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
-nodeenv==1.9.1 ; python_version >= "3.9" and python_version < "4.0"
-packaging==24.1 ; python_version >= "3.9" and python_version < "4.0"
-pathspec==0.12.1 ; python_version >= "3.9" and python_version < "4.0"
-pbr==6.0.0 ; python_version >= "3.9" and python_version < "4.0"
-platformdirs==4.2.2 ; python_version >= "3.9" and python_version < "4.0"
-pluggy==1.5.0 ; python_version >= "3.9" and python_version < "4.0"
-pre-commit==2.21.0 ; python_version >= "3.9" and python_version < "4.0"
-pycodestyle==2.8.0 ; python_version >= "3.9" and python_version < "4.0"
-pyflakes==2.4.0 ; python_version >= "3.9" and python_version < "4.0"
-pygments==2.18.0 ; python_version >= "3.9" and python_version < "4.0"
-pytest==7.4.4 ; python_version >= "3.9" and python_version < "4.0"
-pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "4.0"
-requests==2.32.3 ; python_version >= "3.9" and python_version < "4.0"
-rich==13.7.1 ; python_version >= "3.9" and python_version < "4.0"
-ruamel-yaml-clib==0.2.8 ; platform_python_implementation == "CPython" and python_version < "3.13" and python_version >= "3.9"
-ruamel-yaml==0.18.6 ; python_version >= "3.9" and python_version < "4.0"
-safety==2.3.4 ; python_version >= "3.9" and python_version < "4.0"
-setuptools==71.1.0 ; python_version >= "3.9" and python_version < "4.0"
-stevedore==5.2.0 ; python_version >= "3.9" and python_version < "4.0"
-tomli==2.0.1 ; python_version >= "3.9" and python_full_version < "3.11.0a7"
-typing-extensions==4.12.2 ; python_version >= "3.9" and python_version < "3.10"
-urllib3==2.2.2 ; python_version >= "3.9" and python_version < "4.0"
-virtualenv==20.26.3 ; python_version >= "3.9" and python_version < "4.0"
-werkzeug==3.0.3 ; python_version >= "3.9" and python_version < "4.0"
-zipp==3.19.2 ; python_version >= "3.9" and python_version < "3.10"
+annotated-types==0.7.0 ; python_version >= "3.9"
+anyio==4.11.0 ; python_version >= "3.9"
+authlib==1.6.5 ; python_version >= "3.9"
+backports-datetime-fromisoformat==2.0.3 ; python_version == "3.9"
+bandit==1.8.6 ; python_version >= "3.9"
+black==25.11.0 ; python_version >= "3.9"
+blinker==1.9.0 ; python_version >= "3.9"
+certifi==2025.11.12 ; python_version >= "3.9"
+cffi==2.0.0 ; platform_python_implementation != "PyPy" and python_full_version >= "3.9.0"
+cfgv==3.4.0 ; python_version >= "3.9"
+charset-normalizer==3.4.4 ; python_version >= "3.9"
+click==8.1.8 ; python_version == "3.9"
+click==8.3.0 ; python_version >= "3.10"
+colorama==0.4.6 ; python_version >= "3.9" and (platform_system == "Windows" or sys_platform == "win32")
+coverage==7.10.7 ; python_version >= "3.9"
+cryptography==43.0.3 ; python_full_version == "3.9.0" or python_full_version == "3.9.1"
+cryptography==46.0.3 ; python_full_version > "3.9.0" and python_full_version != "3.9.1"
+distlib==0.4.0 ; python_version >= "3.9"
+dparse==0.6.4 ; python_version >= "3.9"
+exceptiongroup==1.3.0 ; python_version < "3.11" and python_version >= "3.9"
+filelock==3.19.1 ; python_version == "3.9"
+filelock==3.20.0 ; python_version >= "3.10"
+flake8==7.3.0 ; python_version >= "3.9"
+flask==3.1.2 ; python_version >= "3.9"
+h11==0.16.0 ; python_version >= "3.9"
+httpcore==1.0.9 ; python_version >= "3.9"
+httpx==0.28.1 ; python_version >= "3.9"
+identify==2.6.15 ; python_version >= "3.9"
+idna==3.11 ; python_version >= "3.9"
+importlib-metadata==8.7.0 ; python_version == "3.9"
+iniconfig==2.1.0 ; python_version == "3.9"
+iniconfig==2.3.0 ; python_version >= "3.10"
+itsdangerous==2.2.0 ; python_version >= "3.9"
+jinja2==3.1.6 ; python_version >= "3.9"
+joblib==1.5.2 ; python_version >= "3.9"
+markdown-it-py==3.0.0 ; python_version == "3.9"
+markdown-it-py==4.0.0 ; python_version >= "3.10"
+markupsafe==3.0.3 ; python_version >= "3.9"
+marshmallow==4.0.1 ; python_version == "3.9"
+marshmallow==4.1.0 ; python_version >= "3.10"
+mccabe==0.7.0 ; python_version >= "3.9"
+mdurl==0.1.2 ; python_version >= "3.9"
+mypy-extensions==1.1.0 ; python_version >= "3.9"
+nltk==3.9.2 ; python_version >= "3.9"
+nodeenv==1.9.1 ; python_version >= "3.9"
+packaging==25.0 ; python_version >= "3.9"
+pathspec==0.12.1 ; python_version >= "3.9"
+platformdirs==4.4.0 ; python_version == "3.9"
+platformdirs==4.5.0 ; python_version >= "3.10"
+pluggy==1.6.0 ; python_version >= "3.9"
+pre-commit==4.3.0 ; python_version >= "3.9"
+pycodestyle==2.14.0 ; python_version >= "3.9"
+pycparser==2.23 ; platform_python_implementation != "PyPy" and python_full_version >= "3.9.0" and implementation_name != "PyPy"
+pydantic-core==2.41.5 ; python_version >= "3.9"
+pydantic==2.12.4 ; python_version >= "3.9"
+pyflakes==3.4.0 ; python_version >= "3.9"
+pygments==2.19.2 ; python_version >= "3.9"
+pytest==8.4.2 ; python_version >= "3.9"
+pytokens==0.3.0 ; python_version >= "3.9"
+pyyaml==6.0.3 ; python_version >= "3.9"
+regex==2025.11.3 ; python_version >= "3.9"
+requests==2.32.5 ; python_version >= "3.9"
+rich==14.2.0 ; python_version >= "3.9"
+ruamel-yaml-clib==0.2.14 ; platform_python_implementation == "CPython" and python_version < "3.14" and python_version >= "3.9"
+ruamel-yaml==0.18.16 ; python_version >= "3.9"
+safety-schemas==0.0.16 ; python_version >= "3.9"
+safety==3.7.0 ; python_version >= "3.9"
+shellingham==1.5.4 ; python_version >= "3.9"
+sniffio==1.3.1 ; python_version >= "3.9"
+stevedore==5.5.0 ; python_version >= "3.9"
+tenacity==9.1.2 ; python_version >= "3.9"
+tomli==2.3.0 ; python_version < "3.11" and python_version >= "3.9"
+tomlkit==0.13.3 ; python_version >= "3.9"
+tqdm==4.67.1 ; python_version >= "3.9"
+typer==0.20.0 ; python_version >= "3.9"
+typing-extensions==4.15.0 ; python_version >= "3.9"
+typing-inspection==0.4.2 ; python_version >= "3.9"
+urllib3==2.5.0 ; python_version >= "3.9"
+virtualenv==20.35.4 ; python_version >= "3.9"
+werkzeug==3.1.3 ; python_version >= "3.9"
+zipp==3.23.0 ; python_version == "3.9"
